# job-parser

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
src/apis/: base_class.py  hh_api.py  sj_apy.py
src/savers/: base_saver.py  json_saver.py
src/vacancies/: vacancy_processor.py
src/vacancys/: vacancy_processor.py
utils/: user_interaction.py  user_representative.py
